--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav></nav>
-        <img src="logo.png" alt="логотип">
+        <img src="pictures/Logo4 1.png" alt="логотип">
         <button>DOWNLOAD</button>
     </header>
 
@@ -29,10 +29,10 @@
             <p>
                 DOWNLOAD APP NOW
             </p>
-            <button><img src="" alt="Google play download"></button>
-            <button><img src="" alt="App Store download"></button>
-
-            <img src="" alt="Mobile phone picture">
+            <button><img src="pictures/toppng 1.png" alt="Google play download"></button>
+            <button><img src="pictures/PngItem_1144050 2.png" alt="App Store download"></button>
+            <br>
+            <img src="pictures/Free Ui View Mobile App Mockup 1.png" alt="Mobile phone picture">
         </section>
 
         <section>
@@ -43,7 +43,7 @@
                 elit. Viverra nunc ante
                 velit vitae.
             </p>
-            <img src="" alt="mobile phone pic">
+            <img src="pictures/android-smartphone-free-mockup 1.png" alt="mobile phone pic">
 
             <article>
                 <h1>CREATIVE DESIGN</h1>
@@ -86,7 +86,7 @@
 
             <h1>AWESOME UI DESIGN</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <img src="" alt="mobile phone">
+            <img src="pictures/App.png" alt="mobile phone">
 
             <img src="" alt="little icon mobile phone">
 
@@ -109,14 +109,14 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae,
                 nullam lobortis enim.</p>
 
-            <button><img src="" alt=""></button>
-            <button><img src="" alt=""></button>
+            <button><img src="pictures/toppng 1.png" alt=""></button>
+            <button><img src="pictures/PngItem_1144050 2.png" alt=""></button>
+            <br>
+            <button>Download</button>
+            <button>Like</button>
+            <button>5 star rating</button>
 
-            <button></button>
-            <button></button>
-            <button></button>
-
-            <img src="" alt="mobile phone">
+            <img src="pictures/Gravity-Scene-iPhone-12-Mockup 1.png" alt="mobile phone">
         </section>
 
         <section>
@@ -124,7 +124,9 @@
             <h1>HOW TO USE THE APP PERFECTLY</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.</p>
 
-            <video src=""></video>
+            <img src="pictures/Image.png" alt="">
+            <button></button>
+
         </section>
 
         <section>
@@ -142,7 +144,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.</p>
 
             <article>
-                <img src="" alt="">
+                <img src="pictures/Image (1).png" alt="">
                 <h1>THE SNAP PIXEL:HOW IT WORKS AND HOW TO INSTALL</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus
                     vitae, nullam lobortis enim.</p>
@@ -150,7 +152,7 @@
             </article>
 
             <article>
-                <img src="" alt="">
+                <img src="pictures/Image (2).png" alt="">
                 <h1>GLOBAL PARTNER SOLUTIONS: A PARTNERSHIP OF INNOVATION</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus
                     vitae, nullam lobortis enim.</p>
@@ -158,7 +160,7 @@
             </article>
 
             <article>
-                <img src="" alt="">
+                <img src="pictures/Image (3).png" alt="">
                 <h1>2021: AN OPPORTUNITY FORSNAPCHATTERS TO START FRESH</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus
                     vitae, nullam lobortis enim.</p>
