--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </header>
 
     <main>
-
         <div class="main_container">
+
             <section>
                 <div class="container-2">
 
@@ -53,13 +53,15 @@
             <section>
                 <div class="container-3">
 
-                    <h2>ABOUT OUR APP</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet,<br>
-                        consectetur adipiscing elit. Viverra<br>
-                        nunc ante velit vitae.
-                    </p>
-                    <img src="pictures/about-our-app.png" alt="phone-image">
+                    <div class="about_our_app_container-3">
+                        <h2>ABOUT OUR APP</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet,<br>
+                            consectetur adipiscing elit. Viverra<br>
+                            nunc ante velit vitae.
+                        </p>
+                        <img src="pictures/about-our-app.png" alt="phone-image">
+                    </div>
 
                     <ul>
                         <li>
@@ -96,12 +98,14 @@
             <section>
                 <div class="container-4">
 
-                    <h2>APP FEATURES</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet,<br>
-                        consectetur adipiscing elit. Viverra<br>
-                        nunc ante velit vitae.
-                    </p>
+                    <div class="app_features_container-4">
+                        <h2>APP FEATURES</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet,<br>
+                            consectetur adipiscing elit. Viverra<br>
+                            nunc ante velit vitae.
+                        </p>
+                    </div>
 
                     <ul>
                         <li>
