--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href=""><img src="pictures/app-store.png" alt="app store icon"></a>
                     </article>
 
-                    <img src="pictures/mobile-app.png" alt="big phone image">
+                    <img src="pictures/mobile-app.png" alt="">
 
                 </div>
             </section>
@@ -60,7 +60,7 @@
                             consectetur adipiscing elit. Viverra<br>
                             nunc ante velit vitae.
                         </p>
-                        <img src="pictures/about-our-app.png" alt="phone-image">
+                        <img src="pictures/about-our-app.png" alt="">
                     </div>
 
                     <ul>
@@ -138,7 +138,7 @@
                         </li>
 
                         <li>
-                            <img src="pictures/app-features.png" alt="big phone picture">
+                            <img src="pictures/app-features.png" alt="">
                         </li>
 
                         <li>
@@ -208,7 +208,7 @@
                         </li>
                     </ul>
 
-                    <img src="pictures/2 phones.jpg" alt="2 phones picture">
+                    <img src="pictures/2 phones.jpg" alt="">
 
                 </div>
             </section>
@@ -261,7 +261,7 @@
 
                     <ul>
                         <li>
-                            <img src="pictures/yellow-phone.png" alt="phone picture">
+                            <img src="pictures/yellow-phone.png" alt="">
                             <h1>THE SNAP PIXEL:HOW IT WORKS AND HOW TO INSTALL</h1>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
@@ -272,7 +272,7 @@
                         </li>
 
                         <li>
-                            <img src="pictures/iphone.png" alt="phone picture">
+                            <img src="pictures/iphone.png" alt="">
                             <h1>GLOBAL PARTNER SOLUTIONS: A PARTNERSHIP OF INNOVATION</h1>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
@@ -283,7 +283,7 @@
                         </li>
 
                         <li>
-                            <img src="pictures/hand-app.png" alt="phone picture">
+                            <img src="pictures/hand-app.png" alt="">
                             <h1>2021: AN OPPORTUNITY FORSNAPCHATTERS TO START FRESH</h1>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
@@ -357,9 +357,9 @@
                     <p>Subscribe our newsletter to get our latest update & news</p>
                 </div>
 
-                <form action="">
+                <form action="" method="get">
                     <input type="text" value="Your email adress">
-                    <input type="submit"><img src="pictures/strelka-in-square.png" alt="to go icon">
+                    <button><img src="pictures/strelka-in-square.png"</button>
                 </form>
 
             </section>
