--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <div class="header_container">
+        <div class="container">
             <nav></nav>
             <a href=""><img src="pictures/logo.png" alt="LOGO"></a>
             <button>
@@ -20,7 +20,7 @@
 
     <main>
         <section>
-            <div class="container_1">
+            <div class="container">
                 <div class="inroduce">
                     <h1>A GREAT APP MAKES YOUR LIFE BETTER</h1>
                     <p>
@@ -38,7 +38,7 @@
         </section>
 
         <section>
-            <div class="container_2">
+            <div class="container">
                 <div class="about_our_app">
                     <h2>ABOUT OUR APP</h2>
                     <p>
@@ -78,7 +78,7 @@
         </section>
 
         <section>
-            <div class="container_3">
+            <div class="container">
                 <div class="app_features">
                     <h2>APP FEATURES</h2>
                     <p>
@@ -144,7 +144,7 @@
         </section>
 
         <section>
-            <div class="container_4">
+            <div class="container">
                 <div class="download_app_now">
                     <h2>DOWNLOAD APP NOW</h2>
                     <p>
@@ -182,7 +182,7 @@
         </section>
 
         <section>
-            <div class="container_5">
+            <div class="container">
                 <h2>HOW TO USE THE APP PERFECTLY</h2>
                 <p>
                     Lorem ipsum dolor sit amet,
@@ -194,7 +194,7 @@
         </section>
 
         <section>
-            <div class="container_6">
+            <div class="container">
                 <div class="rewiews">
                     <h2>OUR HAPPY CUSTOMERS</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.</p>
@@ -219,7 +219,7 @@
         </section>
 
         <section>
-            <div class="container_7">
+            <div class="container">
                 <div class="out_recent_blog">
                     <h2>OUR RECENT BLOG</h2>
                     <p>
@@ -231,7 +231,7 @@
                     <li>
                         <a href="#">
                             <img src="pictures/yellow-phone.png" alt="">
-                            <h1>THE SNAP PIXEL:HOW IT WORKS AND HOW TO INSTALL</h1>
+                            <h3>THE SNAP PIXEL:HOW IT WORKS AND HOW TO INSTALL</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
                                 Est tellus
@@ -243,7 +243,7 @@
                     <li>
                         <a href="#">
                             <img src="pictures/iphone.png" alt="">
-                            <h1>GLOBAL PARTNER SOLUTIONS: A PARTNERSHIP OF INNOVATION</h1>
+                            <h3>GLOBAL PARTNER SOLUTIONS: A PARTNERSHIP OF INNOVATION</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
                                 Est tellus
@@ -255,7 +255,7 @@
                     <li>
                         <a href="#">
                             <img src="pictures/hand-app.png" alt="">
-                            <h1>2021: AN OPPORTUNITY FORSNAPCHATTERS TO START FRESH</h1>
+                            <h3>2021: AN OPPORTUNITY FORSNAPCHATTERS TO START FRESH</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
                                 Est tellus
@@ -269,7 +269,7 @@
         </section>
 
         <section>
-            <div class="container8">
+            <div class="container">
                 <img src="pictures/mail-in-circle.png" alt="icon mail">
                 <a href="mailto:#">info@youremail.com</a>
                 <img src="pictures/phone-in-circle.png" alt="icon phone">
@@ -280,7 +280,7 @@
     </main>
 
     <footer>
-        <div class="footer_container">
+        <div class="container">
             <div class="footer_description">
                 <div class="footer_logo">
                     <h2>LOGO</h2>
