--- a/form.html
+++ b/form.html
@@ -91,10 +91,11 @@
                         <label class="form-pol">
                             Мужской:
                             <input type="radio" name="male-female" value="male">
+                        </label>
+                        <label>
                             Женский:
                             <input type="radio" name="male-female" value="female">
                         </label>
-
                         <label class="form-password">
                             Пароль (Обязательно):
                             <input type="password" name="password" placeholder="********" required>
@@ -117,11 +118,16 @@
                         <label class="form-contact">
                             Утро
                             <input type="checkbox" name="morning">
+                        </label>
+                        <label>
                             День
                             <input type="checkbox" name="day">
+                        </label>
+                        <label>
                             Вечер
                             <input type="checkbox" name="evening">
                         </label>
+
                     </fieldset>
                     
                     <div class="buttons">
