--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
                 <ul class="header__navbar--left-elements">
                     <li class="navbar__left-elements--item">
                         <a href="" class="left-elements__item--home">
-                            home
+                            <span>home</span>
                         </a>
                     </li>
                     <li class="navbar__left-elements--item">
                         <a href="" class="left-elements__item--about">
-                            about
+                            <span>about</span>
                         </a>
                     </li>
                     <li class="navbar__left-elements--item">
                         <a href="" class="left-elements__item--features">  
-                            features
+                            <span>features</span>
                         </a>
                     </li>
                 </ul>
@@ -74,12 +74,12 @@
                 <ul class="header__navbar--right-elements">
                     <li class="navbar__right-elements--item">
                         <a href="" class="right-elements__item--screenshot">
-                            screenshot
+                            <span>screenshot</span>
                         </a>
                     </li>
                     <li class="navbar__right-elements--item">
                         <a href="" class="right-elements__item--blog">
-                            blog
+                            <span>blog</span>
                         </a>
                     </li>
                 </ul>
