--- a/index.html
+++ b/index.html
@@ -560,10 +560,12 @@
                     <p class="footer_news__paragraph--description-text white-paragraph p_16-24">Subscribe our newsletter
                         to get our latest update & news</p>
                     <form class="footer_news__form" action="" method="get">
-                        <span class="form__text">enter your email</span>
-                        <input class="form__input--email" type="email" placeholder="Your email adress">
-                        <button class="form__input--email-button" type="submit"><img
-                                src="pictures/send-plane-2-fill.svg" alt=""></button>
+                        <label>
+                            <span class="form__text">enter your email</span>
+                            <input class="form__input--email" type="email" placeholder="Your email adress">
+                            <span class="sr-only">Отправить почту</span><button class="form__input--email-button" type="submit"><img
+                                    src="pictures/send-plane-2-fill.svg" alt=""></button>
+                        </label>
                     </form>
                 </div>
             </div>
