--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+    <a class="skip-link" href="#main">
+        Перейти к контенту
+    </a>
+
     <header class="main_header">
         <div class="navbar__container container">
             <div class="navbar__upnav">
@@ -25,22 +30,26 @@
                 <ul class="upnav__social-list">
                     <li class="upnav__social-list--item">
                         <a href="#">
+                            <span class="sr-only">Ссылка на facebook</span>
                             <img src="pictures/facebook-fill-white.svg" alt="facebook icon"
                                 class="upnav__item--facebook">
                         </a>
                     </li>
                     <li class="upnav__social-list--item">
                         <a href="">
+                            <span class="sr-only">Ссылка на instagram</span>
                             <img src="pictures/instagram-fill.svg" alt="instagram icon" class="upnav__item--instagram">
                         </a>
                     </li>
                     <li class="upnav__social-list--item">
                         <a href="">
+                            <span class="sr-only">Ссылка на twitter</span>
                             <img src="pictures/twitter-fill.svg" alt="twitter icon">
                         </a>
                     </li>
                     <li class="upnav__social-list--item">
                         <a href="">
+                            <span class="sr-only">Ссылка на youtube</span>
                             <img src="pictures/youtube-fill.svg" alt="youtube icon">
                         </a>
                     </li>
@@ -89,7 +98,8 @@
             </nav>
         </div>
     </header>
-    <main>
+
+    <main id="main">
         <section class="app_introduce_section">
             <div class="app_introduce_section__container container">
                 <div class="container__block-border block-border">
@@ -109,15 +119,19 @@
                         <p class="introduce__description--download black-paragraph h_20-30">DOWNLOAD APP NOW</p>
                         <div class="introduce__links links">
                             <a class="links__link--google-play" href="#">
+                                <span class="sr-only">Ссылка на google-pay</span>
                                 <img src="pictures/toppng 1.jpg" alt="google play icon">
                             </a>
                             <a class="links__link--google-play-2" href="#">
+                                <span class="sr-only">Ссылка на google-pay</span>
                                 <img src="pictures/google-paly-2.png" alt="google play icon">
                             </a>
                             <a class="links__link--appstore" href="#">
+                                <span class="sr-only">Ссылка на app-store</span>
                                 <img src="pictures/PngItem_1144050 2.jpg" alt="app store icon">
                             </a>
                             <a class="links__link--appstore-2" href="#">
+                                <span class="sr-only">Ссылка на app-store</span>
                                 <img src="pictures/appstore-2.png" alt="app store icon">
                             </a>
                         </div>
@@ -290,10 +304,14 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
                     </p>
                     <div class="download_app_now__links">
-                        <a class="download_app_now__links--google-play" href="#"><img class="download_app_now__links--google-play" src="pictures/toppng 1.jpg" alt="google play button"></a>
-                        <a class="download_app_now__links--google-play-2" href="#"><img class="download_app_now__links--google-play-2" src="pictures/google-paly-2.png" alt="google play button"></a>
-                        <a class="download_app_now__links--appstore" href="#"><img class="download_app_now__links--appstore" src="pictures/PngItem_1144050 2.jpg" alt="app store button"></a>
-                        <a href="#" class="download_app_now__links--appstore-2"><img class="download_app_now__links--appstore-2" src="pictures/appstore-2.png" alt="app store button"></a>
+                        <a class="download_app_now__links--google-play" href="#">
+                            <span class="sr-only">Ссылка на google-play</span><img class="download_app_now__links--google-play" src="pictures/toppng 1.jpg" alt="google play button"></a>
+                        <a class="download_app_now__links--google-play-2" href="#">
+                            <span class="sr-only">Ссылка на google-play</span><img class="download_app_now__links--google-play-2" src="pictures/google-paly-2.png" alt="google play button"></a>
+                        <a class="download_app_now__links--appstore" href="#">
+                            <span class="sr-only">Ссылка на app-store</span><img class="download_app_now__links--appstore" src="pictures/PngItem_1144050 2.jpg" alt="app store button"></a>
+                        <a href="#" class="download_app_now__links--appstore-2">
+                            <span class="sr-only">Ссылка на app-store</span><img class="download_app_now__links--appstore-2" src="pictures/appstore-2.png" alt="app store button"></a>
                     </div>
                     <ul class="download_app_now__list">
                         <li class="list__item--download item">
@@ -488,6 +506,7 @@
             <div class="information_section__container container">
                 <div class="information_section__mail_and_number">
                     <a class="mail_and_number" href="mailto:info@youremail.com">
+                        <span class="sr-only">Отправить письмо</span>
                         <img src="pictures/Ellipse 34.svg" alt="icon mail">
                         <p class="mail_and_number__mail black-paragraph h_20-30">
                             info@youremail.com
@@ -495,6 +514,7 @@
                     </a>
                     <div class="information_section__border"></div>
                     <a class="mail_and_number" href="tel:+8803216559985">
+                        <span class="sr-only">Позвонить</span>
                         <img src="pictures/Call.svg" alt="icon phone">
                         <p class="black-paragraph h_20-30">
                             +880 321
@@ -525,16 +545,20 @@
                     </p>
                     <ul class="footer-description__social-list">
                         <li class="social-list__item--facebook item">
-                            <a href=""><img src="pictures/facebook-fill.svg" alt="facebook icon"></a>
+                            <a href="">
+                                <span class="sr-only">Ссылка на facebook</span><img src="pictures/facebook-fill.svg" alt="facebook icon"></a>
                         </li>
                         <li class="social-list__item--instagram item">
-                            <a href=""><img src="pictures/instagram-fill.svg" alt="instagram icon"></a>
+                            <a href="">
+                                <span class="sr-only">Ссылка на instagram</span><img src="pictures/instagram-fill.svg" alt="instagram icon"></a>
                         </li>
                         <li class="social-list__item--twitter item">
-                            <a href=""><img src="pictures/twitter-fill.svg" alt="twitter icon"></a>
+                            <a href="">
+                                <span class="sr-only">Ссылка на twitter</span><img src="pictures/twitter-fill.svg" alt="twitter icon"></a>
                         </li>
                         <li class="social-list__item--youtube item">
-                            <a href=""><img src="pictures/youtube-fill.svg" alt="youtube icon"></a>
+                            <a href="">
+                                <span class="sr-only">Ссылка на youtube</span><img src="pictures/youtube-fill.svg" alt="youtube icon"></a>
                         </li>
                     </ul>
                 </div>
